backend/src/main/java/com/example/payment/error/exception/DuplicateTransactionException.java
package com.example.payment.error.exception;

public class DuplicateTransactionException extends Exception {
}
